# flylips

./: .gitignore  README.md  pyproject.toml
src/flylips/: combined_plot.py  main.py  wing.py
tests/: conftest.py  test_wing.py
